--- a/UpdateMe/app/build.gradle
+++ b/UpdateMe/app/build.gradle
@@ -25,4 +25,10 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
+    compile('com.google.maps.android:android-maps-utils:0.3') {
+        exclude group: 'com.google.android.gms'
+    }
+    compile files('src/main/res/libs/google-http-client-1.20.0.jar')
+    compile files('src/main/res/libs/google-http-client-android-1.20.0.jar')
+    compile files('src/main/res/libs/google-http-client-jackson2-1.20.0.jar')
 }
