--- a/UpdateMe/app/build.gradle
+++ b/UpdateMe/app/build.gradle
@@ -24,4 +24,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.google.android.gms:play-services:7.5.0'
+    compile('com.google.maps.android:android-maps-utils:0.3') {
+        exclude group: 'com.google.android.gms'
+    }
 }
