--- a/UpdateMe/app/build.gradle
+++ b/UpdateMe/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile('com.google.maps.android:android-maps-utils:0.3') {
         exclude group: 'com.google.android.gms'
     }
+    compile files('src/main/res/libs/commons-io-2.4.jar')
 }
