--- a/UpdateMe/app/src/main/AndroidManifest.xml
+++ b/UpdateMe/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         </activity>
 
         <activity android:name=".MapSettings"/>
+        
+        <activity android:name=".JobActivity" />
 
     </application>
 
