--- a/UpdateMe/app/build.gradle
+++ b/UpdateMe/app/build.gradle
@@ -25,8 +25,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
-    compile('com.google.maps.android:android-maps-utils:0.3') {
-        exclude group: 'com.google.android.gms'
-    }
+    compile 'com.google.maps.android:android-maps-utils:0.3'
     compile files('src/main/res/libs/commons-io-2.4.jar')
 }
