--- a/UpdateMe/app/build.gradle
+++ b/UpdateMe/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.google.maps.android:android-maps-utils:0.3'
-    compile files('src/main/res/libs/commons-io-2.4.jar')
+    compile 'org.apache.commons:commons-io:1.3.2'
+
 }
