--- a/UpdateMe/app/src/main/AndroidManifest.xml
+++ b/UpdateMe/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,11 +41,14 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MapSettings"/>
+        <activity android:name=".MapSettings"
+            android:screenOrientation="portrait"/>
         
-        <activity android:name=".JobActivity" />
+        <activity android:name=".JobActivity"
+            android:screenOrientation="portrait"/>
 
-        <activity android:name=".StockInfoActivity" />
+        <activity android:name=".StockInfoActivity"
+            android:screenOrientation="portrait"/>
 
     </application>
 
